--- a/package.json
+++ b/package.json
@@ -9,10 +9,21 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^18.0.1",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "node-sass": "^7.0.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.2.3",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
